@@ -146,13 +146,18 @@ class KickGen:
         configs = self.get_repo_filenames(obj,is_profile)
         repos = self.repos
 
+        # FIXME: this really should be dynamically generated as with the kickstarts
         for c in configs:
            name = c.split("/")[-1].replace(".repo","")
            (is_core, baseurl) = self.analyze_repo_config(c)
            for repo in repos:
                if repo.name == name:
                    if not repo.yumopts.has_key('enabled') or repo.yumopts['enabled'] == '1':
-                       buf = buf + "repo --name=%s --baseurl=%s\n" % (name, baseurl)
+                       if repo.mirror_locally:
+                           buf = buf + "repo --name=%s --baseurl=%s\n" % (name, baseurl)
+                       else:
+                           buf = buf + "repo --name=%s --baseurl=%s\n" % (name, repo.mirror)
+
         return buf
 
     def analyze_repo_config(self, filename):
